--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
+        "lodash.debounce": "^4.0.8",
         "lucide-vue-next": "^0.468.0",
-        "reka-ui": "^2.3.0",
+        "reka-ui": "^2.3.1",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
