--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/vite": "^4.1.1",
+        "@tiptap/starter-kit": "^2.23.0",
+        "@tiptap/vue-3": "^2.23.0",
+        "@toast-ui/editor": "^3.2.2",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
         "axios": "^1.9.0",
@@ -35,6 +38,7 @@
         "lodash.debounce": "^4.0.8",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.3.1",
+        "sweetalert2": "^11.22.1",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
